Fixed a bug in the accelerated Crank-Nicolson code

--- a/solutions/MATH60082-lab-solution-9.ipynb
+++ b/solutions/MATH60082-lab-solution-9.ipynb
@@ -929,7 +929,7 @@
     "        # https://en.wikipedia.org/wiki/Tridiagonal_matrix_algorithm\n",
     "        #################################################\n",
     "        cPrime = np.zeros(jMax) \n",
-    "        dPrime = np.zeros(jMax) \n",
+    "        dPrime = np.zeros(jMax+1) \n",
     "    \n",
     "        cPrime[0] = A_diags[0,2] / A_diags[0,1] # c_0 / b_0\n",
     "        dPrime[0] = d[0] / A_diags[0,1] # d_0 / b_0\n",
