--- a/examples/BoundaryConditions.ipynb
+++ b/examples/BoundaryConditions.ipynb
@@ -339,10 +339,10 @@
     "$$\n",
     "or, multiplying by $\\Delta x$ and rearranging,\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "    U^{i+1}_{1} - U^{i+1}_{0} & = \\Delta x U^{i+1}_0  \\\\\n",
     "    (1 + \\Delta x)U^{i+1}_0 - U^{i+1}_{1} & = 0\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "which is of the form\n",
     "$$\n",
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "8b37de90-007f-464b-8196-4cf781adba66",
    "metadata": {},
    "outputs": [
@@ -1046,7 +1046,7 @@
      "output_type": "stream",
      "text": [
       "100 repetitions of HeatEqn_CN2() took 1.66 seconds.\n",
-      "100 repetitions of HeatEqn_CN3() took 0.0634 seconds.\n",
+      "100 repetitions of HeatEqn_CN3() took 0.0638 seconds.\n",
       "That's a speedup by a factor of around 26.\n"
      ]
     }
@@ -1082,10 +1082,10 @@
     "\n",
     "But sometimes, as for example in the first part of the final assignment, one can't use the ghost point approach and so is forced to use one of the other three-point formulae. Consider the following Taylor expansions:\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "    f(x + \\Delta x) & = f(x) + \\Delta x f'(x) + \\frac{\\Delta x^2}{2} f''(x) + \\frac{\\Delta x^3}{3!} f'''(x) + O(\\Delta x^4) \\\\\n",
     "    f(x + 2\\Delta x) & = f(x) + 2\\Delta x f'(x) + \\frac{4\\Delta x^2}{2} f''(x) + \\frac{8\\Delta x^3}{3!} f'''(x) + O(\\Delta x^4) \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "$$\n",
     "Multiplying the first by 4 and subtracting the second yields:\n",
     "$$\n",
@@ -1167,11 +1167,11 @@
     "$$\n",
     "which does have the desired form, with\n",
     "$$\n",
-    "\\begin{alignat}{3}\n",
+    "\\begin{alignat*}{3}\n",
     "    b_0 & = (a_1/c_1)-(3 + 2 \\Delta x) &&= (-r)/(-r) -(3 + 2 \\Delta x) && = -2(1 + \\Delta x) \\\\\n",
     "    c_0 & = 4 + (b_1/c_1) && = 4 + 2(1+r)/(-r) && = 2(1 - (1/r)) \\\\\n",
     "    d_0 & = (3 + 2\\Delta x) U^{i}_0 -4 U^{i}_1 + U^{i}_2 + d_1/c_1 && = (3 + 2\\Delta x) U^{i}_0 -4 U^{i}_1 + U^{i}_2 - d_1/r  \\\\\n",
-    "\\end{alignat}\n",
+    "\\end{alignat*}\n",
     "$$\n",
     "\n",
     "where, to obtain the final expressions, I have used $a_1 = c_1 = -r$ and $b_1 = 2(1 + r)$. \n",
@@ -1189,12 +1189,12 @@
     "$$\n",
     "which corresponds to taking\n",
     "$$\n",
-    "\\begin{alignat}{2}\n",
+    "\\begin{alignat*}{2}\n",
     "    a_{\\texttt{jMax}} & = 4 + (b_{\\texttt{jMax-1}}/a_{\\texttt{jMax-1}}) && = 2(1 - (1/r)) \\\\\n",
     "    b_{\\texttt{jMax}} & = (c_{\\texttt{jMax-1}}/a_{\\texttt{jMax-1}})-(3 + 2 \\Delta x) \n",
     "        && = -2(1 + \\Delta x) \\\\\n",
     "    d_{\\texttt{jMax}} & = U^{i}_{\\texttt{jMax-2}} - 4 U^{i}_{\\texttt{jMax-1}}  +(3 + 2 \\Delta x) U^{i}_{\\texttt{jMax}} + d_{\\texttt{jMax-1}}/a_{\\texttt{jMax-1}} && = U^{i}_{\\texttt{jMax-2}} - 4 U^{i}_{\\texttt{jMax-1}}  +(3 + 2 \\Delta x) U^{i}_{\\texttt{jMax}} -d_{\\texttt{jMax-1}}/r. \\\\\n",
-    "\\end{alignat}\n",
+    "\\end{alignat*}\n",
     "$$"
    ]
   },
@@ -1309,7 +1309,7 @@
    "id": "76c08a02-b8d9-4226-a7c8-7984dd74bff7",
    "metadata": {},
    "source": [
-    "As with the the ghost point approach, this $O(\\Delta x^2, \\, \\Delta t^2)$ gives very accurate results everywhere except near the boundaries."
+    "As with the the ghost point approach, this $O(\\Delta x^2, \\, \\Delta t^2)$ algorithm gives very accurate results everywhere except near the boundaries."
    ]
   },
   {
