--- a/examples/BoundaryConditions.ipynb
+++ b/examples/BoundaryConditions.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "This problem is discussed on pages 29&ndash;38 of \n",
     "\n",
-    "> GD Smith (), Numerical Solution of PDEs: Finite Difference Methods, 3rd ed., OUP.\n",
+    "> GD Smith (1985), Numerical Solution of PDEs: Finite Difference Methods, 3rd ed., OUP.\n",
     "\n",
     "and has analytic solution\n",
     "\n",
